--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,7 +14,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 
   .navbar-brand{
-    font-size:28px;
+    font-size:38px;
+    font-family: 'Prompt', sans-serif;
   }
 }
 
